@@ -1,0 +1,69 @@
+//                                               -*- C++ -*-
+/**
+ *  @brief Factory for StudentCopula distribution
+ *
+ *  Copyright 2005-2023 Airbus-EDF-IMACS-ONERA-Phimeca
+ *
+ *  This library is free software: you can redistribute it and/or modify
+ *  it under the terms of the GNU Lesser General Public License as published by
+ *  the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This library is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU Lesser General Public License for more details.
+ *
+ *  You should have received a copy of the GNU Lesser General Public License
+ *  along with this library.  If not, see <http://www.gnu.org/licenses/>.
+ *
+ */
+#ifndef OPENTURNS_STUDENTCOPULAFACTORY_HXX
+#define OPENTURNS_STUDENTCOPULAFACTORY_HXX
+
+#include "openturns/OTprivate.hxx"
+#include "openturns/DistributionFactoryImplementation.hxx"
+#include "openturns/StudentCopula.hxx"
+#include "openturns/OptimizationAlgorithm.hxx"
+
+
+BEGIN_NAMESPACE_OPENTURNS
+
+/**
+ * @class StudentCopulaFactory
+ */
+class OT_API StudentCopulaFactory
+  : public DistributionFactoryImplementation
+{
+  CLASSNAME
+public:
+
+  /** Default constructor */
+  StudentCopulaFactory();
+
+  /** Virtual constructor */
+  StudentCopulaFactory * clone() const override;
+
+  /* Here is the interface that all derived class must implement */
+  using DistributionFactoryImplementation::build;
+
+  Distribution build(const Sample & sample) const override;
+  Distribution build(const Point & parameters) const override;
+  Distribution build() const override;
+  StudentCopula buildAsStudentCopula(const Sample & sample) const;
+  StudentCopula buildAsStudentCopula(const Point & parameters) const;
+  StudentCopula buildAsStudentCopula() const;
+
+  /** Optimization solver accessor */
+  void setOptimizationAlgorithm(const OptimizationAlgorithm & solver);
+  OptimizationAlgorithm getOptimizationAlgorithm() const;
+  
+protected:
+  /* Solver for log-likelihood maximization */
+  OptimizationAlgorithm solver_;
+
+}; /* class StudentCopulaFactory */
+
+END_NAMESPACE_OPENTURNS
+
+#endif /* OPENTURNS_STUDENTCOPULAFACTORY_HXX */
